--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -73,6 +73,7 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter"><a href="_requestbuilder_.html#addprojection" class="tsd-kind-icon">add<wbr>Projection</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildbatchdeleteinput" class="tsd-kind-icon">build<wbr>Batch<wbr>Delete<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildbatchgetinput" class="tsd-kind-icon">build<wbr>Batch<wbr>Get<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildbatchputinput" class="tsd-kind-icon">build<wbr>Batch<wbr>Put<wbr>Input</a></li>
@@ -93,6 +94,41 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
+					<a name="addprojection" class="tsd-anchor"></a>
+					<h3>add<wbr>Projection</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
+						<li class="tsd-signature tsd-kind-icon">add<wbr>Projection&lt;T&gt;<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, projectableRequest<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span>, attributes<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L361">requestBuilder.ts:361</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-type-parameters-title">Type parameters</h4>
+							<ul class="tsd-type-parameters">
+								<li>
+									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span></h4>
+								</li>
+							</ul>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
+								</li>
+								<li>
+									<h5>projectableRequest: <span class="tsd-signature-type">T</span></h5>
+								</li>
+								<li>
+									<h5>attributes: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">T</span></h4>
+						</li>
+					</ul>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
 					<a name="buildbatchdeleteinput" class="tsd-anchor"></a>
 					<h3>build<wbr>Batch<wbr>Delete<wbr>Input</h3>
@@ -103,7 +139,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L288">requestBuilder.ts:288</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L291">requestBuilder.ts:291</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -138,7 +174,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L328">requestBuilder.ts:328</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L331">requestBuilder.ts:331</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -173,7 +209,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L263">requestBuilder.ts:263</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L266">requestBuilder.ts:266</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -208,7 +244,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L365">requestBuilder.ts:365</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L397">requestBuilder.ts:397</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -239,7 +275,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L150">requestBuilder.ts:150</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L153">requestBuilder.ts:153</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -280,7 +316,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L78">requestBuilder.ts:78</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L81">requestBuilder.ts:81</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -321,7 +357,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L102">requestBuilder.ts:102</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L105">requestBuilder.ts:105</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -353,7 +389,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L183">requestBuilder.ts:183</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L186">requestBuilder.ts:186</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -405,7 +441,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L20">requestBuilder.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L23">requestBuilder.ts:23</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -437,7 +473,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L402">requestBuilder.ts:402</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L434">requestBuilder.ts:434</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -460,7 +496,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L243">requestBuilder.ts:243</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L246">requestBuilder.ts:246</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -483,7 +519,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L236">requestBuilder.ts:236</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L239">requestBuilder.ts:239</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -506,7 +542,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/922d9f1/src/requestBuilder.ts#L250">requestBuilder.ts:250</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/57542fc/src/requestBuilder.ts#L253">requestBuilder.ts:253</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -555,6 +591,9 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter">
+						<a href="_requestbuilder_.html#addprojection" class="tsd-kind-icon">add<wbr>Projection</a>
+					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_requestbuilder_.html#buildbatchdeleteinput" class="tsd-kind-icon">build<wbr>Batch<wbr>Delete<wbr>Input</a>
 					</li>
