--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -104,9 +104,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L357">requestBuilder.ts:357</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L368">requestBuilder.ts:368</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Add a projection expression to an input object.  A projection expression
+										defines what attributes are returned in the result.  This can save
+									on bandwidth.</p>
+								</div>
+								<p>For documentation on attribute names see: <a href="http://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html">http://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html</a></p>
+							</div>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
 							<ul class="tsd-type-parameters">
 								<li>
@@ -120,12 +128,19 @@
 								</li>
 								<li>
 									<h5>projectableRequest: <span class="tsd-signature-type">T</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>the input to add a projection expression to</p>
+									</div>
 								</li>
 								<li>
 									<h5>attributes: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>an array of attribute names to return</p>
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">T</span></h4>
+							<p>a copy of projectableRequest with the projection expression set</p>
 						</li>
 					</ul>
 				</section>
@@ -139,7 +154,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L287">requestBuilder.ts:287</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L287">requestBuilder.ts:287</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -174,7 +189,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L327">requestBuilder.ts:327</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L327">requestBuilder.ts:327</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -209,7 +224,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L262">requestBuilder.ts:262</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L262">requestBuilder.ts:262</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -244,7 +259,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L393">requestBuilder.ts:393</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L404">requestBuilder.ts:404</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -275,7 +290,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L153">requestBuilder.ts:153</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L153">requestBuilder.ts:153</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -316,7 +331,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L81">requestBuilder.ts:81</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L81">requestBuilder.ts:81</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -357,7 +372,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L105">requestBuilder.ts:105</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L105">requestBuilder.ts:105</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -389,7 +404,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L186">requestBuilder.ts:186</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L186">requestBuilder.ts:186</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -441,7 +456,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L23">requestBuilder.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L23">requestBuilder.ts:23</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -473,7 +488,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L430">requestBuilder.ts:430</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L441">requestBuilder.ts:441</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -496,7 +511,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L242">requestBuilder.ts:242</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L242">requestBuilder.ts:242</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -519,7 +534,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L235">requestBuilder.ts:235</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L235">requestBuilder.ts:235</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -542,7 +557,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b851abd/src/requestBuilder.ts#L249">requestBuilder.ts:249</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/requestBuilder.ts#L249">requestBuilder.ts:249</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
