--- a/modules/_concurrenthelper_.html
+++ b/modules/_concurrenthelper_.html
@@ -81,6 +81,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_concurrenthelper_.html#backofffactor" class="tsd-kind-icon">backoff<wbr>Factor</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_concurrenthelper_.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_concurrenthelper_.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_concurrenthelper_.html#concurrentfactor" class="tsd-kind-icon">concurrent<wbr>Factor</a></li>
 							</ul>
 						</section>
@@ -102,7 +103,7 @@
 					<div class="tsd-signature tsd-kind-icon">Thunk<wbr>Promise<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/concurrentHelper.ts#L42">concurrentHelper.ts:42</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/concurrentHelper.ts#L47">concurrentHelper.ts:47</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -130,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/concurrentHelper.ts#L16">concurrentHelper.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/concurrentHelper.ts#L21">concurrentHelper.ts:21</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -145,7 +146,7 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Initial<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;2000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/concurrentHelper.ts#L11">concurrentHelper.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/concurrentHelper.ts#L11">concurrentHelper.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -155,12 +156,27 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
+					<a name="backoffmax" class="tsd-anchor"></a>
+					<h3>backoff<wbr>Max</h3>
+					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Max<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;60000</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/concurrentHelper.ts#L16">concurrentHelper.ts:16</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The maximum wait when backing off on request rate.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="concurrentfactor" class="tsd-anchor"></a>
 					<h3>concurrent<wbr>Factor</h3>
 					<div class="tsd-signature tsd-kind-icon">concurrent<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;20</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/concurrentHelper.ts#L6">concurrentHelper.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/concurrentHelper.ts#L6">concurrentHelper.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -182,7 +198,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/concurrentHelper.ts#L26">concurrentHelper.ts:26</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/concurrentHelper.ts#L31">concurrentHelper.ts:31</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -216,7 +232,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/6f3d2c9/src/concurrentHelper.ts#L48">concurrentHelper.ts:48</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/concurrentHelper.ts#L53">concurrentHelper.ts:53</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -285,6 +301,9 @@
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="_concurrenthelper_.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="_concurrenthelper_.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="_concurrenthelper_.html#concurrentfactor" class="tsd-kind-icon">concurrent<wbr>Factor</a>
