--- a/modules/_responseunwrapper_.html
+++ b/modules/_responseunwrapper_.html
@@ -89,13 +89,13 @@
 					<a name="unwrapbatchgetoutput" class="tsd-anchor"></a>
 					<h3>unwrap<wbr>Batch<wbr>Get<wbr>Output</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Batch<wbr>Get<wbr>Output<span class="tsd-signature-symbol">(</span>tableName<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, response<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.BatchGetItemOutput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></li>
+						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Batch<wbr>Get<wbr>Output<span class="tsd-signature-symbol">(</span>tableSchemaOrName<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span>, response<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.BatchGetItemOutput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/responseUnwrapper.ts#L62">responseUnwrapper.ts:62</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/responseUnwrapper.ts#L62">responseUnwrapper.ts:62</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -106,9 +106,9 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>tableName: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
+									<h5>tableSchemaOrName: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></h5>
 									<div class="tsd-comment tsd-typography">
-										<p>the string table name or TableSchema</p>
+										<p>the TableSchema or the string table name</p>
 									</div>
 								</li>
 								<li>
@@ -133,7 +133,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/responseUnwrapper.ts#L49">responseUnwrapper.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/responseUnwrapper.ts#L49">responseUnwrapper.ts:49</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -165,7 +165,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/responseUnwrapper.ts#L91">responseUnwrapper.ts:91</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/responseUnwrapper.ts#L89">responseUnwrapper.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -197,7 +197,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/responseUnwrapper.ts#L9">responseUnwrapper.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/responseUnwrapper.ts#L9">responseUnwrapper.ts:9</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -226,7 +226,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/responseUnwrapper.ts#L78">responseUnwrapper.ts:78</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/responseUnwrapper.ts#L76">responseUnwrapper.ts:76</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
