--- a/interfaces/_tableschema_.tableschema.html
+++ b/interfaces/_tableschema_.tableschema.html
@@ -97,6 +97,7 @@
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#sortkeyfield" class="tsd-kind-icon">sort<wbr>Key<wbr>Field</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#sortkeytype" class="tsd-kind-icon">sort<wbr>Key<wbr>Type</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#tablename" class="tsd-kind-icon">table<wbr>Name</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#ttlfield" class="tsd-kind-icon">ttl<wbr>Field</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#versionkeyfield" class="tsd-kind-icon">version<wbr>Key<wbr>Field</a></li>
 							</ul>
 						</section>
@@ -111,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">date<wbr>Serialization<wbr>Function<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/TableSchema.ts#L47">TableSchema.ts:47</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/TableSchema.ts#L56">TableSchema.ts:56</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -158,7 +159,7 @@
 					<div class="tsd-signature tsd-kind-icon">primary<wbr>Key<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/TableSchema.ts#L14">TableSchema.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/TableSchema.ts#L14">TableSchema.ts:14</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -173,7 +174,7 @@
 					<div class="tsd-signature tsd-kind-icon">primary<wbr>Key<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"string"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"number"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/TableSchema.ts#L19">TableSchema.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/TableSchema.ts#L19">TableSchema.ts:19</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -188,7 +189,7 @@
 					<div class="tsd-signature tsd-kind-icon">sort<wbr>Key<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/TableSchema.ts#L25">TableSchema.ts:25</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/TableSchema.ts#L25">TableSchema.ts:25</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -204,7 +205,7 @@
 					<div class="tsd-signature tsd-kind-icon">sort<wbr>Key<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"string"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"number"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/TableSchema.ts#L31">TableSchema.ts:31</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/TableSchema.ts#L31">TableSchema.ts:31</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -220,7 +221,7 @@
 					<div class="tsd-signature tsd-kind-icon">table<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/TableSchema.ts#L9">TableSchema.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/TableSchema.ts#L9">TableSchema.ts:9</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -230,18 +231,36 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="ttlfield" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> ttl<wbr>Field</h3>
+					<div class="tsd-signature tsd-kind-icon">ttl<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/TableSchema.ts#L49">TableSchema.ts:49</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The name of a field to use as the TTL (time to live) field.  Items with this field
+								set will have the value converted to seconds since 12:00:00 AM January 1st, 1970 UTC.
+							DynamoDB will automatically delete items whose <code>ttl</code> has passed (within about 48 hours).</p>
+						</div>
+						<p>Support for this field is currently experimental.</p>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="versionkeyfield" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> version<wbr>Key<wbr>Field</h3>
 					<div class="tsd-signature tsd-kind-icon">version<wbr>Key<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/TableSchema.ts#L40">TableSchema.ts:40</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/TableSchema.ts#L40">TableSchema.ts:40</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
 							<p>The name of a field to use as the version key for optimistic
-								locking.  If set on an item the type of the value must be &quot;number&quot;.
+								locking.  If set on an item, the type of the value must be <code>number</code>.
 								If set and the field is not on an item during a put then
 								there must be an existing item in the table.  If set and the field
 							is present on an item then the existing value in the table must match.</p>
@@ -306,6 +325,9 @@
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_tableschema_.tableschema.html#tablename" class="tsd-kind-icon">table<wbr>Name</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_tableschema_.tableschema.html#ttlfield" class="tsd-kind-icon">ttl<wbr>Field</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_tableschema_.tableschema.html#versionkeyfield" class="tsd-kind-icon">version<wbr>Key<wbr>Field</a>
