--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -83,6 +83,7 @@
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildputinput" class="tsd-kind-icon">build<wbr>Put<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildqueryinput" class="tsd-kind-icon">build<wbr>Query<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildrequestputitem" class="tsd-kind-icon">build<wbr>Request<wbr>Put<wbr>Item</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildupdatetimetoliveinput" class="tsd-kind-icon">build<wbr>Update<wbr>Time<wbr>ToLive<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported"><a href="_requestbuilder_.html#jstypetoddbtype" class="tsd-kind-icon">js<wbr>Type<wbr>ToDdb<wbr>Type</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported"><a href="_requestbuilder_.html#operatorisfunction" class="tsd-kind-icon">operator<wbr>IsFunction</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported"><a href="_requestbuilder_.html#operatorparamcount" class="tsd-kind-icon">operator<wbr>Param<wbr>Count</a></li>
@@ -104,7 +105,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L368">requestBuilder.ts:368</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L381">requestBuilder.ts:381</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -135,7 +136,7 @@
 								<li>
 									<h5>attributes: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h5>
 									<div class="tsd-comment tsd-typography">
-										<p>an array of attribute names to return</p>
+										<p>an array of attribute names to fetch</p>
 									</div>
 								</li>
 							</ul>
@@ -154,7 +155,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L287">requestBuilder.ts:287</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L300">requestBuilder.ts:300</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -189,7 +190,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L327">requestBuilder.ts:327</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L340">requestBuilder.ts:340</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -218,13 +219,13 @@
 					<a name="buildbatchputinput" class="tsd-anchor"></a>
 					<h3>build<wbr>Batch<wbr>Put<wbr>Input</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">build<wbr>Batch<wbr>Put<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Object</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.BatchWriteItemInput</span></li>
+						<li class="tsd-signature tsd-kind-icon">build<wbr>Batch<wbr>Put<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.BatchWriteItemInput</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L262">requestBuilder.ts:262</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L275">requestBuilder.ts:275</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -238,7 +239,7 @@
 									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
 								</li>
 								<li>
-									<h5>items: <span class="tsd-signature-type">Object</span><span class="tsd-signature-symbol">[]</span></h5>
+									<h5>items: <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>the items to put</p>
 									</div>
@@ -253,26 +254,37 @@
 					<a name="buildcreatetableinput" class="tsd-anchor"></a>
 					<h3>build<wbr>Create<wbr>Table<wbr>Input</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">build<wbr>Create<wbr>Table<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.CreateTableInput</span></li>
+						<li class="tsd-signature tsd-kind-icon">build<wbr>Create<wbr>Table<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, readCapacity<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span>, writeCapacity<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.CreateTableInput</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L404">requestBuilder.ts:404</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L418">requestBuilder.ts:418</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Build a request object that can be passed into <code>createTable</code>.
-										ProvisionedThroughput takes on default values of 1 and 1 and
-									should probably be edited.</p>
+									<p>Build a request object that can be passed into <code>createTable</code>.</p>
 								</div>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> readCapacity: <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;1</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>represents one strongly consistent read per second, or two
+										eventually consistent reads per second, for an item up to 4 KB in size.</p>
+									</div>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> writeCapacity: <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;1</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>represents one write per second for an item up to 1 KB in size.</p>
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">aws.DynamoDB.Types.CreateTableInput</span></h4>
@@ -290,7 +302,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L153">requestBuilder.ts:153</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L168">requestBuilder.ts:168</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -331,7 +343,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L81">requestBuilder.ts:81</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L81">requestBuilder.ts:81</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -366,13 +378,13 @@
 					<a name="buildputinput" class="tsd-anchor"></a>
 					<h3>build<wbr>Put<wbr>Input</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">build<wbr>Put<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, item<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.PutItemInput</span></li>
+						<li class="tsd-signature tsd-kind-icon">build<wbr>Put<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, item<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.PutItemInput</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L105">requestBuilder.ts:105</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L105">requestBuilder.ts:105</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -386,7 +398,7 @@
 									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
 								</li>
 								<li>
-									<h5>item: <span class="tsd-signature-type">Object</span></h5>
+									<h5>item: <span class="tsd-signature-type">object</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">aws.DynamoDB.Types.PutItemInput</span></h4>
@@ -404,7 +416,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L186">requestBuilder.ts:186</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L199">requestBuilder.ts:199</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -456,7 +468,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L23">requestBuilder.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L23">requestBuilder.ts:23</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -478,6 +490,37 @@
 						</li>
 					</ul>
 				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="buildupdatetimetoliveinput" class="tsd-anchor"></a>
+					<h3>build<wbr>Update<wbr>Time<wbr>ToLive<wbr>Input</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">build<wbr>Update<wbr>Time<wbr>ToLive<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.UpdateTimeToLiveInput</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L469">requestBuilder.ts:469</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Build a request object that can be passed into <code>updateTimeToLive</code>.
+										Time to live settings will be enabled if <code>tableSchema.ttlField</code>
+									is defined and disabled otherwise.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">aws.DynamoDB.Types.UpdateTimeToLiveInput</span></h4>
+							<p>input for the <code>updateTimeToLive</code> method</p>
+						</li>
+					</ul>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
 					<a name="jstypetoddbtype" class="tsd-anchor"></a>
 					<h3>js<wbr>Type<wbr>ToDdb<wbr>Type</h3>
@@ -488,7 +531,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L441">requestBuilder.ts:441</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L491">requestBuilder.ts:491</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -511,7 +554,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L242">requestBuilder.ts:242</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L255">requestBuilder.ts:255</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -534,7 +577,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L235">requestBuilder.ts:235</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L248">requestBuilder.ts:248</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -557,7 +600,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/requestBuilder.ts#L249">requestBuilder.ts:249</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/requestBuilder.ts#L262">requestBuilder.ts:262</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -635,6 +678,9 @@
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_requestbuilder_.html#buildrequestputitem" class="tsd-kind-icon">build<wbr>Request<wbr>Put<wbr>Item</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_requestbuilder_.html#buildupdatetimetoliveinput" class="tsd-kind-icon">build<wbr>Update<wbr>Time<wbr>ToLive<wbr>Input</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="_requestbuilder_.html#jstypetoddbtype" class="tsd-kind-icon">js<wbr>Type<wbr>ToDdb<wbr>Type</a>
