--- a/modules/_validation_.html
+++ b/modules/_validation_.html
@@ -108,7 +108,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L3">validation.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L4">validation.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -118,7 +118,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Key<wbr>Pair<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">[</span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">, </span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L4">validation.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L5">validation.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -128,7 +128,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Query<wbr>Condition<wbr>Operator<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"BETWEEN"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"begins_with"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L5">validation.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L6">validation.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -141,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">query<wbr>Condition<wbr>Operators<span class="tsd-signature-symbol">:</span> <a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[&quot;&#x3D;&quot;, &quot;&lt;&quot;, &quot;&lt;&#x3D;&quot;, &quot;&gt;&quot;, &quot;&gt;&#x3D;&quot;, &quot;BETWEEN&quot;, &quot;begins_with&quot;]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L7">validation.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L8">validation.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -158,7 +158,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L145">validation.ts:145</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L152">validation.ts:152</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -181,7 +181,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L9">validation.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L10">validation.ts:10</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -198,13 +198,13 @@
 					<a name="checkschemaitemagreement" class="tsd-anchor"></a>
 					<h3>check<wbr>Schema<wbr>Item<wbr>Agreement</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">check<wbr>Schema<wbr>Item<wbr>Agreement<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, item<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">check<wbr>Schema<wbr>Item<wbr>Agreement<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, item<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L106">validation.ts:106</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L107">validation.ts:107</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -218,7 +218,7 @@
 									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
 								</li>
 								<li>
-									<h5>item: <span class="tsd-signature-type">Object</span></h5>
+									<h5>item: <span class="tsd-signature-type">object</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -229,13 +229,13 @@
 					<a name="checkschemaitemsagreement" class="tsd-anchor"></a>
 					<h3>check<wbr>Schema<wbr>Items<wbr>Agreement</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">check<wbr>Schema<wbr>Items<wbr>Agreement<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Object</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">check<wbr>Schema<wbr>Items<wbr>Agreement<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L130">validation.ts:130</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L137">validation.ts:137</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -249,7 +249,7 @@
 									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
 								</li>
 								<li>
-									<h5>items: <span class="tsd-signature-type">Object</span><span class="tsd-signature-symbol">[]</span></h5>
+									<h5>items: <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -266,7 +266,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L39">validation.ts:39</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L40">validation.ts:40</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -300,7 +300,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L73">validation.ts:73</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L74">validation.ts:74</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -331,7 +331,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L55">validation.ts:55</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L56">validation.ts:56</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -362,7 +362,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/1a142ce/src/validation.ts#L64">validation.ts:64</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L65">validation.ts:65</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
