--- a/modules/_responseunwrapper_.html
+++ b/modules/_responseunwrapper_.html
@@ -95,7 +95,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/responseUnwrapper.ts#L62">responseUnwrapper.ts:62</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/responseUnwrapper.ts#L62">responseUnwrapper.ts:62</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -133,7 +133,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/responseUnwrapper.ts#L49">responseUnwrapper.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/responseUnwrapper.ts#L49">responseUnwrapper.ts:49</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -165,7 +165,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/responseUnwrapper.ts#L89">responseUnwrapper.ts:89</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/responseUnwrapper.ts#L89">responseUnwrapper.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -197,7 +197,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/responseUnwrapper.ts#L9">responseUnwrapper.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/responseUnwrapper.ts#L9">responseUnwrapper.ts:9</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -226,7 +226,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/responseUnwrapper.ts#L76">responseUnwrapper.ts:76</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/responseUnwrapper.ts#L76">responseUnwrapper.ts:76</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -257,6 +257,9 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="_condition_.html">"<wbr>Condition"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -264,6 +267,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_index_.html">"index"</a>
