--- a/globals.html
+++ b/globals.html
@@ -70,9 +70,11 @@
 						<section class="tsd-index-section ">
 							<h3>External modules</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-external-module"><a href="modules/_condition_.html" class="tsd-kind-icon">"<wbr>Condition"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_tableschema_.html" class="tsd-kind-icon">"<wbr>Table<wbr>Schema"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_batchhelper_.html" class="tsd-kind-icon">"batch<wbr>Helper"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_concurrenthelper_.html" class="tsd-kind-icon">"concurrent<wbr>Helper"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_dynamodbreservedwords_.html" class="tsd-kind-icon">"dynamo<wbr>DbReserved<wbr>Words"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_index_.html" class="tsd-kind-icon">"index"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_requestbuilder_.html" class="tsd-kind-icon">"request<wbr>Builder"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_requestunwrapper_.html" class="tsd-kind-icon">"request<wbr>Unwrapper"</a></li>
@@ -91,6 +93,9 @@
 						<a href="globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_condition_.html">"<wbr>Condition"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -98,6 +103,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_index_.html">"index"</a>
