--- a/modules/_tableschema_.html
+++ b/modules/_tableschema_.html
@@ -86,6 +86,9 @@
 					<li class="globals  ">
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_condition_.html">"<wbr>Condition"</a>
+					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
@@ -94,6 +97,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_index_.html">"index"</a>
