--- a/modules/_validation_.html
+++ b/modules/_validation_.html
@@ -73,6 +73,7 @@
 						<section class="tsd-index-section ">
 							<h3>Type aliases</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-type-alias tsd-parent-kind-external-module"><a href="_validation_.html#dynamoconditionoperator" class="tsd-kind-icon">Dynamo<wbr>Condition<wbr>Operator</a></li>
 								<li class="tsd-kind-type-alias tsd-parent-kind-external-module"><a href="_validation_.html#dynamokey" class="tsd-kind-icon">Dynamo<wbr>Key</a></li>
 								<li class="tsd-kind-type-alias tsd-parent-kind-external-module"><a href="_validation_.html#dynamokeypair" class="tsd-kind-icon">Dynamo<wbr>Key<wbr>Pair</a></li>
 								<li class="tsd-kind-type-alias tsd-parent-kind-external-module"><a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-kind-icon">Dynamo<wbr>Query<wbr>Condition<wbr>Operator</a></li>
@@ -81,12 +82,14 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Variables</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported"><a href="_validation_.html#conditionoperators" class="tsd-kind-icon">condition<wbr>Operators</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported"><a href="_validation_.html#queryconditionoperators" class="tsd-kind-icon">query<wbr>Condition<wbr>Operators</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkconditionoperator" class="tsd-kind-icon">check<wbr>Condition<wbr>Operator</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkqueryconditionoperator" class="tsd-kind-icon">check<wbr>Query<wbr>Condition<wbr>Operator</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkschema" class="tsd-kind-icon">check<wbr>Schema</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_validation_.html#checkschemaitemagreement" class="tsd-kind-icon">check<wbr>Schema<wbr>Item<wbr>Agreement</a></li>
@@ -103,12 +106,22 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Type aliases</h2>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-external-module">
+					<a name="dynamoconditionoperator" class="tsd-anchor"></a>
+					<h3>Dynamo<wbr>Condition<wbr>Operator</h3>
+					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Condition<wbr>Operator<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"BETWEEN"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"attribute_exists"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"attribute_not_exists"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"attribute_type"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"begins_with"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"contains"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"size"</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L7">validation.ts:7</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-external-module">
 					<a name="dynamokey" class="tsd-anchor"></a>
 					<h3>Dynamo<wbr>Key</h3>
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L4">validation.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L3">validation.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -118,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Key<wbr>Pair<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">[</span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">, </span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L5">validation.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L4">validation.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -128,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Query<wbr>Condition<wbr>Operator<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"BETWEEN"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"begins_with"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L6">validation.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L5">validation.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -136,18 +149,51 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Variables</h2>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="conditionoperators" class="tsd-anchor"></a>
+					<h3>condition<wbr>Operators</h3>
+					<div class="tsd-signature tsd-kind-icon">condition<wbr>Operators<span class="tsd-signature-symbol">:</span> <a href="_validation_.html#dynamoconditionoperator" class="tsd-signature-type">DynamoConditionOperator</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[&quot;&#x3D;&quot;,  &quot;&lt;&quot;,  &quot;&lt;&#x3D;&quot;,  &quot;&gt;&quot;,  &quot;&gt;&#x3D;&quot;,  &quot;BETWEEN&quot;,  &quot;attribute_exists&quot;,  &quot;attribute_not_exists&quot;,  &quot;attribute_type&quot;,  &quot;begins_with&quot;,  &quot;contains&quot;,  &quot;size&quot;]</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L20">validation.ts:20</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
 					<a name="queryconditionoperators" class="tsd-anchor"></a>
 					<h3>query<wbr>Condition<wbr>Operators</h3>
 					<div class="tsd-signature tsd-kind-icon">query<wbr>Condition<wbr>Operators<span class="tsd-signature-symbol">:</span> <a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[&quot;&#x3D;&quot;, &quot;&lt;&quot;, &quot;&lt;&#x3D;&quot;, &quot;&gt;&quot;, &quot;&gt;&#x3D;&quot;, &quot;BETWEEN&quot;, &quot;begins_with&quot;]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L8">validation.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L6">validation.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="checkconditionoperator" class="tsd-anchor"></a>
+					<h3>check<wbr>Condition<wbr>Operator</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">check<wbr>Condition<wbr>Operator<span class="tsd-signature-symbol">(</span>op<span class="tsd-signature-symbol">: </span><a href="_validation_.html#dynamoconditionoperator" class="tsd-signature-type">DynamoConditionOperator</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L174">validation.ts:174</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>op: <a href="_validation_.html#dynamoconditionoperator" class="tsd-signature-type">DynamoConditionOperator</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
 					<a name="checkqueryconditionoperator" class="tsd-anchor"></a>
 					<h3>check<wbr>Query<wbr>Condition<wbr>Operator</h3>
@@ -158,7 +204,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L152">validation.ts:152</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L165">validation.ts:165</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -181,7 +227,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L10">validation.ts:10</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L23">validation.ts:23</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -204,7 +250,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L107">validation.ts:107</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L120">validation.ts:120</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -235,7 +281,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L137">validation.ts:137</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L150">validation.ts:150</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -266,7 +312,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L40">validation.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L53">validation.ts:53</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -300,7 +346,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L74">validation.ts:74</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L87">validation.ts:87</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -331,7 +377,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L56">validation.ts:56</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L69">validation.ts:69</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -362,7 +408,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3a8079f/src/validation.ts#L65">validation.ts:65</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/cfb694f/src/validation.ts#L78">validation.ts:78</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -392,6 +438,9 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="_condition_.html">"<wbr>Condition"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -399,6 +448,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_index_.html">"index"</a>
@@ -420,6 +472,9 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
+						<a href="_validation_.html#dynamoconditionoperator" class="tsd-kind-icon">Dynamo<wbr>Condition<wbr>Operator</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
 						<a href="_validation_.html#dynamokey" class="tsd-kind-icon">Dynamo<wbr>Key</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
@@ -429,7 +484,13 @@
 						<a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-kind-icon">Dynamo<wbr>Query<wbr>Condition<wbr>Operator</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_validation_.html#conditionoperators" class="tsd-kind-icon">condition<wbr>Operators</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="_validation_.html#queryconditionoperators" class="tsd-kind-icon">query<wbr>Condition<wbr>Operators</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_validation_.html#checkconditionoperator" class="tsd-kind-icon">check<wbr>Condition<wbr>Operator</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_validation_.html#checkqueryconditionoperator" class="tsd-kind-icon">check<wbr>Query<wbr>Condition<wbr>Operator</a>
